# freshqt

./: .gitignore  NOTICE  README.md  example.py  pyproject.toml  typography.py
src/example/: gallery.py
src/freshqt/animation/: __init__.py  easings.py  tween.py
src/freshqt/assets/: __init__.py
src/freshqt/core/: __init__.py  base_icon_manager.py  checkbox.py  color.py  math.py  models.py  palettes.py  theme.py  typing.py
src/freshqt/palettes/: alucard.py  catppuccin.py  catpuccin.py  dracula.py
src/freshqt/widgets/: __init__.py  avatar.py  badgelabel.py  button.py  checkbox.py  code.py  divider.py  kbdlabel.py  lineedit.py  slider.py  switch.py  template.py  typolabel.py
