[project]
name = "freshqt"
description = "A modern, refreshed take on PyQt user interfaces."
version = "0.0.1"
readme = "README.md"
authors = [
    {name="Kadir Aksoy"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "PyQt6",
]
requires-python = ">=3.10"

[project.scripts]
freshqt_gallery = "example.gallery:main"

[project.urls]
homepage = "https://github.com/kadir014/freshqt"
bugtracker = "https://github.com/kadir014/freshqt/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true